--- a/fedora-server-initial-setup.yml
+++ b/fedora-server-initial-setup.yml
@@ -1,13 +1,18 @@
 # do some inital setup tasks on a new fedora server vm
-# designed and tested on Fedora 41
+# updated May 2025
+# tested on Fedora 42 Server Edition
 
 #recommended fedora server software setup :
 # - custom + guest agents + common networkmanager submodules + standard
 
-# ansible-playbook -i your_server_ip, -u andrew --ask-pass --ask-become-pass fedora-server-initial-setup.yml
+# you might have to ssh to the host first to accept the key into your known hosts
 
+# update - this seems to be fixed for Fedora 42
 # note - as of oct 30th 2024, this only works on Fedora 41 if you install python3-libdnf5 first. 
 # sudo dnf install -y python3-libdnf5
+
+# to run : 
+# ansible-playbook -i your_server_ip, -u andrew --ask-pass --ask-become-pass fedora-server-initial-setup.yml
 
 - name: Configure Fedora server
   hosts: all
